# native-camera

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: cam_utils.cpp  cam_utils.h  native-lib.cpp
app/src/main/java/eu/sisik/cam/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
